zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_stack_panes_action-2.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", snapshot)"
---
00 (C): ┌ Pane #1 ─────┐┌ Pane #2 ─────────────────────── apt-anteater ┐┌ Pane #5 ─────┐
01 (C): │              │┌ Pane #3 ─────────────────────── big-antelope ┐│              │
02 (C): │              │┌ Pane #4 ─────────────────────── coy-backpack ┐│              │
03 (C): │              ││                                              ││              │
04 (C): │              ││                                              ││              │
05 (C): │              ││                                              ││              │
06 (C): │              ││                                              ││              │
07 (C): │              ││                                              ││              │
08 (C): │              ││                                              ││              │
09 (C): └──────────────┘└──────────────────────────────────────────────┘└──────────────┘
