zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_switch_mode_action.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{:?}\", switch_mode_action)"
---
Some(ChangeMode(10, Locked, false, Some(NotificationEnd { channel: None, exit_status: None, unblock_condition: None, affected_pane_id: None, affected_tab_id: None, error_message: None, stdout_lines: [] })))
